Re-implemented undo functionality